# polars-deep-dive

./: README.md  pyproject.toml
first_tests/: retrieving_data.py
input/: teste.csv
