[project]
name = "polars-deep-dive"
version = "0.1.0"
description = ""
authors = [
    {name = "guilherme.gouw",email = "guilherme.gouw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.32.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
